fixed bug causing IllegalAccessException in parent class by making inner classes public
git-svn-id: https://svn.codehaus.org/grails/trunk@693 1cfb16fd-6d17-0410-8ff1-b7e8e1e2867d